# wasm-micro-runtime

./: .gitignore  CMakeLists.txt  Makefile  iwasm.mk  makefile  readme.txt
app-samples/hello-world/: main.c
app-samples/open-app/: build.sh  main.c
app-samples/open-app/include/: attr-container.h  open-app.h  readme.txt
app-samples/smart-light/: main.c
doc/: iWASM-User-Guide.docx
lib/: lib-base.h  lib-export-template.c  lib-export.c  lib-export.h  lib-extended.c
lib/open-app/: event.c  event.h  request.c  request.h  response.c  response.h  sensor.c  sensor.h  timer.c  timer.h
products/: CMakeLists.txt
products/alios-things/: iwasm.mk
products/alios-things/src/: main.c
products/iwasm/: CMakeLists.txt  main.c  test_wasm.h
products/iwasm/demo_zephyr/: build.sh
products/iwasm/sample1/: jeffdump
products/linux/: CMakeLists.txt  main.c
products/wavm/: CMakeLists.txt  main.c
products/zephyr/sample/: CMakeLists.txt  iwasm
products/zephyr/sample/src/: main.c
runtime/: CMakeLists.txt
runtime/gc/: CMakeLists.txt  ems_alloc.c  ems_gc_internal.h  ems_hmu.c  ems_kfc.c
runtime/include/: bh_hashmap.h  bh_log.h  bh_vector.h  ems_gc.h  wasm-export.h  wasm_hashmap.h  wasm_log.h  wasm_vector.h
runtime/mem-mgt/: ems_alloc.c  ems_gc_internal.h  ems_hmu.c  ems_kfc.c
runtime/platform/: CMakeLists.txt
runtime/platform/alios/: bh_dlfcn.c  bh_math.c  bh_memory.c  bh_platform.h  bh_platform_log.c  bh_thread.c  bh_time.c  wasm-native.c  wasm_assert.c  wasm_definition.c  wasm_dlfcn.c  wasm_math.c  wasm_memory.c  wasm_platform.c  wasm_platform.h  wasm_platform_log.c  wasm_thread.c  wasm_time.c
runtime/platform/include/: bh_assert.h  bh_config.h  bh_definition.h  bh_memory.h  bh_platform_log.h  bh_thread.h  bh_time.h  bh_types.h  wasm_assert.h  wasm_config.h  wasm_memory.h  wasm_platform_log.h  wasm_thread.h  wasm_time.h  wasm_types.h
runtime/platform/linux/: bh_assert.c  bh_math.c  bh_memory.c  bh_platform.c  bh_platform.h  bh_platform_log.c  bh_thread.c  bh_time.c  platform.cmake  wasm-native.c  wasm_assert.c  wasm_memory.c  wasm_platform.c  wasm_platform.h  wasm_platform_log.c  wasm_thread.c  wasm_time.c
runtime/platform/zephyr/: bh_assert.c  bh_definition.c  bh_dlfcn.c  bh_math.c  bh_memory.c  bh_platform.h  bh_platform_log.c  bh_thread.c  bh_time.c  wasm-native.c  wasm_definition.c  wasm_dlfcn.c  wasm_math.c  wasm_memory.c  wasm_platform.c  wasm_platform.h  wasm_platform_log.c  wasm_thread.c  wasm_time.c  zephyr-common.h
runtime/utils/: CMakeLists.txt  bh_hashmap.c  bh_log.c  bh_vector.c  utils.cmake  wasm_hashmap.c  wasm_log.c  wasm_vector.c
runtime/vmcore_wasm/: CMakeLists.txt  invokeNative_general.c  invokeNative_ia32.s  vmcore.cmake  wasm-application.c  wasm-import.c  wasm-import.h  wasm-interp.c  wasm-interp.h  wasm-linker.c  wasm-linker.h  wasm-loader.c  wasm-loader.h  wasm-native.c  wasm-native.h  wasm-native_linux.c  wasm-native_zephyr.c  wasm-opcode.h  wasm-runtime.c  wasm-runtime.h  wasm-thread.c  wasm-thread.h  wasm.c  wasm.h
test/linux/exp/: build.sh  exp.c
test/linux/mnist/: build.sh  datareader.c  main.c  netdebugger.c  simplela.c  simplela.h  simplenet.c  simplenet.h
test/linux/queens/: build.sh  queens.c
test/linux/sudoku/: build.sh  sudoku.c
tools/iec2wasm/: datatype.py  global_vars.py  iec2wasm  operand.py  pou.py  sample.EXP  trans_arithmetic.py  trans_comparison.py  trans_const.py  trans_conversion.py  trans_for.py  trans_func_call.py  trans_if.py  trans_logical.py  trans_variable.py  translate.py
zephyr_sample/: CMakeLists.txt  readme.txt
zephyr_sample/src/: main.c
